fix: resolve the record button issue

--- a/index.html
+++ b/index.html
@@ -42,13 +42,6 @@
         </div>
     </header>
 
-    <!-- Filter Tabs -->
-    <div class="filter-tabs">
-        <button class="tab-btn active" data-filter="all">All</button>
-        <button class="tab-btn" data-filter="shared">Shared</button>
-        <button class="tab-btn" data-filter="starred">Starred</button>
-    </div>
-
     <!-- Notes List -->
     <main class="notes-container" id="notesList">
         <!-- Notes will be dynamically inserted here -->
@@ -119,10 +112,7 @@
                     <button class="done-btn" id="doneBtn">Done</button>
                 </div>
 
-                <!-- Hidden Record Button (not used in new design) -->
-                <button class="record-btn" id="recordBtn" style="display: none;">
-                    <div class="record-btn-inner"></div>
-                </button>
+                <!-- Expanded Controls -->
 
                 <!-- Expanded Controls -->
             </div>
